feat: Integrate backend API for AI and data ingestion
Introduces a backend API service using Fastify to handle AI queries and data ingestion. This change moves the Gemini API interaction from the frontend to the backend, improving security and scalability. It also adds dependencies for backend services like Fastify, CORS, CSV parsing, and dotenv.

The frontend `geminiService.ts` is refactored to send requests to the new backend API endpoint (`/api/qa`). The backend includes basic routing, CORS configuration, and health checks. Support for ingesting CSV files via a dedicated endpoint is also planned, with placeholders for now.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "@heroicons/react/": "https://aistudiocdn.com/@heroicons/react@^2.2.0/",
-    "recharts": "https://aistudiocdn.com/recharts@^3.3.0"
+    "recharts": "https://aistudiocdn.com/recharts@^3.3.0",
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
+    "process": "https://aistudiocdn.com/process@^0.11.10",
+    "@fastify/cors": "https://aistudiocdn.com/@fastify/cors@^11.1.0",
+    "fastify": "https://aistudiocdn.com/fastify@^5.6.1",
+    "axios": "https://aistudiocdn.com/axios@^1.12.2",
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
+    "fs/": "https://aistudiocdn.com/fs@^0.0.1-security/",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "csv-parser": "https://aistudiocdn.com/csv-parser@^3.2.0"
   }
 }
 </script>
