--- a/index.html
+++ b/index.html
@@ -5,13 +5,57 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UnifiedAI - Data Convergence Platform</title>
+    <title>Data Convergence AI</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              'brand-primary': '#0D1B2A',
+              'brand-secondary': '#1B263B',
+              'brand-accent': '#415A77',
+              'brand-light': '#778DA9',
+              'brand-text': '#E0E1DD',
+              'brand-cyan': '#00F5D4',
+              'brand-green': '#2ECC71',
+              'brand-yellow': '#F1C40F',
+              'brand-red': '#E74C3C',
+            },
+            fontFamily: {
+              sans: ['Inter', 'sans-serif'],
+            },
+          },
+        },
+      }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  </head>
+    <script type="module" src="https://unpkg.com/heroicons@2.1.1/24/outline/index.js"></script>
+  <script type="importmap">
+{
+  "imports": {
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.27.0",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@heroicons/react/": "https://aistudiocdn.com/@heroicons/react@^2.2.0/",
+    "recharts": "https://aistudiocdn.com/recharts@^3.3.0",
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
+    "process": "https://aistudiocdn.com/process@^0.11.10",
+    "@fastify/cors": "https://aistudiocdn.com/@fastify/cors@^11.1.0",
+    "fastify": "https://aistudiocdn.com/fastify@^5.6.1",
+    "axios": "https://aistudiocdn.com/axios@^1.12.2",
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
+    "fs/": "https://aistudiocdn.com/fs@^0.0.1-security/",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "csv-parser": "https://aistudiocdn.com/csv-parser@^3.2.0"
+  }
+}
+</script>
+</head>
   <body class="bg-brand-primary text-brand-text">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
